@@ -1,3 +1,10 @@
 = Release notes v. 4.3
 
 == Table of Contents
+
+* Incorrect response for Update PSU data request with incorrect PSU-ID in header
+
+== Incorrect response for Update PSU data request with incorrect PSU-ID in header
+
+From now on, when you try to update PSU data with wrong PSU-ID, you'll receive error `PSU_CREDENTIALS_INVALID`.
+If you'll try to start authorisation after that again, authorisation will be successfully created.
